# slab.trade

./: .env.local  .replit  Anchor.toml  README.md  cookies.txt  design_guidelines.md  env.example  package-lock.json  package.json  replit.md  tailwind.config.ts  vercel.json  vite.config.ts
api/: callback.js  login.js  wallets.js
api/auth/: user.js
attached_assets/: Pasted--REPLIT-PROMPT-paste-as-a-single-instruction-Build-a-frontend-only-web-app-called-SLAB--1761044645506_1761044645506.txt  Pasted--REPLIT-PROMPT-paste-as-a-single-instruction-Integrate-Percolator-Router-Slab-into-the-1761052994117_1761052994118.txt
client/: index.html
client/src/: App.tsx  App.tsx.backup  index.css  main.tsx
client/src/components/auth/: LoginModal.tsx
client/src/components/layout/: AppSidebar.tsx  TopBar.tsx  (+1 more)
client/src/contexts/: ThemeContext.tsx
client/src/hooks/: useAuth.ts
client/src/lib/: api.ts  bondingCurve.ts  bufferPolyfill.ts  meteoraBonding.ts  themes.ts  wallet.ts  walletSigning.ts
client/src/mocks/: markets.json
client/src/pages/: Creator.tsx  Dashboard.tsx  Discover.tsx  Launch.tsx  Market.tsx  Portfolio.tsx  Vaults.tsx
client/src/percolator/: connection.ts  flows.ts  index.ts  pdas.ts  router.ts  slab.ts  types.ts
client/src/stores/: useLaunchStore.ts  useMarketsStore.ts  useTradeStore.ts
docs/: GOOGLE_OAUTH_SETUP.md  METEORA_INTEGRATION.md
programs/slab-bonding/: Cargo.toml  README.md
programs/slab-bonding/src/: lib.rs
server/: db.ts  replitAuth.ts  routes.ts  storage.ts  walletService.ts
shared/: schema.ts
test/: bonding-curve.test.ts
(+13 files in other folders)
